fixing character coercion and adding tests; fixes README bug

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,12 @@
 output: github_document
 ---
 
+```{r, include = FALSE}
+library(parttime)
+
+knitr::knit_hooks$set(output = function(x, options) crayon::strip_style(x))
+```
+
 # parttime
 
 <!-- badges: start -->
@@ -202,10 +208,8 @@ definitely(parttime(2019) == parttime(2019), by = "year")
 
 Cast a partial time's missingness to a range of possible values
 
-```r
+```{r}
 as.timespan(parttime(2019))
-## <timespan[1]>
-## [1] [2019 — 2020) 
 ```
 
 ## Tidyverse Compatible `vctrs`
@@ -214,10 +218,12 @@ as.timespan(parttime(2019))
 `partial_time` are missing.
 
 ```{r, results = "hide"}
+library(dplyr)
+
 tibble(dates = iso8601_dates) %>%
   mutate(
-    parttimes = as.parttime(dates), 
-    imputed_times = as.POSIXct(impute_time(parttimes))
+    parttimes = as.parttime(dates),
+    imputed_times = impute_time_min(parttimes)
   )
 ```
 
