Fixing character coercion and adding tests; fixes README bug (#21)
* fixing character coercion and adding tests; fixes README bug

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,11 @@
 output: github_document
 ---
 
+```{r, include = FALSE}
+options(crayon.enabled = FALSE, width = 80)
+library(parttime)
+```
+
 # parttime
 
 <!-- badges: start -->
@@ -202,10 +207,8 @@ definitely(parttime(2019) == parttime(2019), by = "year")
 
 Cast a partial time's missingness to a range of possible values
 
-```r
+```{r}
 as.timespan(parttime(2019))
-## <timespan[1]>
-## [1] [2019 — 2020) 
 ```
 
 ## Tidyverse Compatible `vctrs`
@@ -213,15 +216,15 @@ as.timespan(parttime(2019))
 `tibble`-style formatting makes it easy to see which components of each
 `partial_time` are missing.
 
-```{r, results = "hide"}
+```{r}
+library(dplyr)
+
 tibble(dates = iso8601_dates) %>%
   mutate(
-    parttimes = as.parttime(dates), 
-    imputed_times = as.POSIXct(impute_time(parttimes))
+    parttimes = as.parttime(dates),
+    imputed_times = impute_time_min(parttimes)
   )
 ```
-
-<img src="https://user-images.githubusercontent.com/18220321/64467475-b086ad00-d0cd-11e9-8e39-9a6e7e84a44e.png" width="75%"></img>
 
 # Roadmap
 
