--- a/README.Rmd
+++ b/README.Rmd
@@ -12,9 +12,9 @@ knitr::opts_chunk$set(collapse = TRUE)
 # parttime
 
 <!-- badges: start -->
-[![status](https://img.shields.io/static/v1?label=status&message=experimental&color=red)]()
+[![status](https://img.shields.io/static/v1?label=status&message=developing&color=orange)]()
 [![R-CMD-check](https://github.com/dgkf/parttime/workflows/R-CMD-check/badge.svg)](https://github.com/dgkf/parttime/actions)
-[![Coverage](https://codecov.io/gh/dgkf/parttime/branch/master/graph/badge.svg)](https://app.codecov.io/gh/dgkf/parttime?branch=master)
+[![Coverage](https://codecov.io/gh/dgkf/parttime/branch/main/graph/badge.svg)](https://app.codecov.io/gh/dgkf/parttime?branch=main)
 <!-- badges: end -->
 
 A package for a partial datetime class and generics
